--- a/package.json
+++ b/package.json
@@ -7,23 +7,31 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cleanse": "rm -rf node_modules && rm -rf package-lock.json && rm -rf dist && npm i && npm run build && npm start"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/animations": "^8.0.1",
+    "@angular/cdk": "^8.0.1",
+    "@angular/common": "^8.0.1",
+    "@angular/compiler": "^8.0.1",
+    "@angular/core": "^8.0.1",
+    "@angular/forms": "^8.0.1",
+    "@angular/material": "^8.0.1",
+    "@angular/material-moment-adapter": "^8.0.1",
+    "@angular/platform-browser": "^8.0.1",
+    "@angular/platform-browser-dynamic": "^8.0.1",
+    "@angular/router": "^8.0.1",
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "angular-in-memory-web-api": "^0.8.0",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
+    "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "web-animations-js": "^2.3.1",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
