--- a/package.json
+++ b/package.json
@@ -26,19 +26,21 @@
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "angular-in-memory-web-api": "^0.8.0",
     "apollo-angular": "^1.6.0",
+    "apollo-angular-link-http": "^1.6.0",
+    "apollo-cache-inmemory": "^1.3.2",
+    "apollo-client": "^2.6.0",
+    "apollo-link": "^1.2.11",
     "core-js": "^2.5.4",
+    "graphql": "^14.3.1",
+    "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "primeicons": "^1.0.0",
+    "primeng": "^8.0.0",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.9.1",
-    "apollo-angular-link-http": "^1.6.0",
-    "apollo-link": "^1.2.11",
-    "apollo-client": "^2.6.0",
-    "apollo-cache-inmemory": "^1.3.2",
-    "graphql-tag": "^2.10.0",
-    "graphql": "^14.3.1"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
